@@ -1277,17 +1277,6 @@ def _transform(src_crs, dst_crs, xs, ys, zs):
         transform = exc_wrap_pointer(transform)
         exc_wrap_int(OCTTransform(transform, n, x, y, z))
 
-    except CPLE_BaseError as exc:
-        log.debug("{}".format(exc))
-
-    except:
-        CPLFree(x)
-        CPLFree(y)
-        CPLFree(z)
-        _safe_osr_release(src)
-        _safe_osr_release(dst)
-
-    try:
         res_xs = [0]*n
         res_ys = [0]*n
         for i in range(n):
@@ -1305,6 +1294,7 @@ def _transform(src_crs, dst_crs, xs, ys, zs):
         CPLFree(x)
         CPLFree(y)
         CPLFree(z)
+        OCTDestroyCoordinateTransformation(transform)
         _safe_osr_release(src)
         _safe_osr_release(dst)
 
